--- a/scss/plugins/_index.scss
+++ b/scss/plugins/_index.scss
@@ -1,5 +1,5 @@
-// Bootstrap
-// @import './bootstrap/bootstrap';
+//- Bootstrap
+@import './boostrap/bootstrap';
 
 //- Simptip tooltip
 @import "./simptip";
