--- a/scss/components/_section-establishment.scss
+++ b/scss/components/_section-establishment.scss
@@ -6,7 +6,7 @@
   }
 
   &__wrapper {
-    font-family: "sen-regular";
+    font-family: $f-sen-regular;
     max-width: 1300px;
     display: flex;
 
@@ -18,10 +18,8 @@
   
   &__media {
     border: 1px solid black;
-    background-color: white;
     border-radius: 5px;
     margin: 50px 0;
-    color: black;
     padding: 15px;
     z-index: 2;
 
@@ -33,15 +31,15 @@
       display: flex;
       margin: 0;
 
-     iframe,
-     video {
-       width: 100%;
+      iframe,
+      video {
+        width: 100%;
 
-       &[poster] {
-        height:100%;
-        width:100%;
-       }
-     }
+        &[poster] {
+          height:100%;
+          width:100%;
+        }
+      }
     }
 
     &-text {
@@ -51,10 +49,8 @@
 
   &__meet {
     padding: 85px 50px 85px 225px;
-    background-color: black;
     margin-left: -175px;
     border-radius: 5px;
-    color: white;
     z-index: 1;
 
     @include media ('<desktop'){
@@ -68,7 +64,7 @@
     }
 
     &-title {
-      font-family: "sen-bold";
+      font-family: $f-sen-bold;
       font-size: 32px;
     }
 
