--- a/src/_includes/components/section-establishment.pug
+++ b/src/_includes/components/section-establishment.pug
@@ -1,7 +1,7 @@
 mixin section-establishment()
   section.section-establishment
     .section-establishment__wrapper.wrapper
-      .section-establishment__media
+      .section-establishment__media.bg-white.text-dark
         p.section-establishment__media-text Classic
         iframe(width="500" height="350" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1")
         p.section-establishment__media-text My day in 9 seconds
@@ -10,7 +10,7 @@ mixin section-establishment()
         p.section-establishment__media-text Music for mood
         audio(controls)
           source(type="audio/mp3" src="./assets/media/ylvis-thefox.mp3")
-      .section-establishment__meet
+      .section-establishment__meet.bg-dark.text-white
         h4.section-establishment__meet-title Meet the Owners
         br
         p.section-establishment__meet-text John and Jane met on a backpacking adventure in Nepal. John, a former sheep shearer, went on the trip to get some clarity about his next adventures in life. Jane — a Peloton instructor — went on the trip to explore the landscape in Nepal.
