minor fix of fonts

--- a/index.pug
+++ b/index.pug
@@ -20,7 +20,7 @@ block content
   +banner-home-start()
   +section-services
   +banner-info-covid()
-  +section-establishment()
+  //- +section-establishment()
   +footer()
 
 
