--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,7 @@ $f-sen-bold: "Sen-Bold", sans-serif;
 $f-sen-regular: "Sen-Regular", sans-serif;
 
 // Font size
+$fs-1-5em: 24;
 $fs-soc-icon: 30;
 $fs-base: 16;
 $fs-lowRes:13;
