--- a/scss/components/_section-advantages.scss
+++ b/scss/components/_section-advantages.scss
@@ -9,19 +9,17 @@
   &__header {
     position: relative;
     margin-bottom: 55px;
-    padding: 0 50px;
   }
 
   &__title {
     margin-top: 30px;
     font-weight: bold;
-    font-size: 32px;
-    line-height: 54px;
+    font-size: em($fs-soc-icon);
     text-align: center;
   }
 
   &__subtitle {
-    font-size: 16px;
+    font-size: em($fs-base);
     margin-top: 20px;
     text-align: center;
   }
@@ -30,17 +28,18 @@
     flex-wrap: wrap;
     justify-items: center;
     display: flex;
-    margin: 0px 45px;
   }
 
   &__column {
     flex: 0 0 25%;
+    margin-bottom: 50px;
     padding: 0 35px;
-    margin-bottom: 15px;
 
     @include media("<desktop") {
       flex: 1 0 50%;
       min-width: 250px;
+      text-align: center;
+      padding: 0;
     }
   }
 }
@@ -57,13 +56,13 @@
 
   &__title {
     font-weight: 600;
-    font-size: 24px;
+    font-size: em($fs-1-5em);
     margin-bottom: 15px;
   }
 
   &__text {
     font-weight: 100;
-    font-size: 16px;
+    font-size: em($fs-base);
     line-height: 26px;
   }
 }
