--- a/scss/elements/_burger-menu.scss
+++ b/scss/elements/_burger-menu.scss
@@ -2,7 +2,7 @@
   display: none;
 
   &__bar {
-    background-color: $c-darker-grey;
+    background-color: $c-white;
     transition: $t-normal;
     border-radius: 20px;
     margin: 5px auto;
