--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -1,6 +1,6 @@
 mixin section-about-us()
   .c-section-about-us   
-    .c-section-about-us__wrapper  
+    .c-section-about-us__wrapper.wrapper 
         +photocard({
           src: './assets/img/ann.png',
           alt: 'girl',
