--- a/src/_includes/components/section-advantages.pug
+++ b/src/_includes/components/section-advantages.pug
@@ -1,6 +1,6 @@
 mixin section-advantages()
   section.section-advantages
-    .section-advantages__wrapper
+    .section-advantages__wrapper.wrapper
       .section-advantages__header
         .section-advantages__title We’re the best in the business.
         .section-advantages__subtitle We studied at the Swedish-Ukrainian school Beetroot Academy for 4 months
