--- a/src/_includes/components/section-services.pug
+++ b/src/_includes/components/section-services.pug
@@ -1,7 +1,7 @@
 mixin section-services()
 
   section.c-section-services
-    .c-section-services__wrapper
+    .c-section-services__wrapper.wrapper
       .c-section-services__info
         //- Title
         .c-section-services__info__title
