--- a/about-us.css
+++ b/about-us.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: "Sen-Bold";
   src: url("./assets/fonts/sen/Sen-Bold.woff2") format("woff2"), url("./assets/fonts/sen/Sen-Bold.woff") format("woff");
@@ -578,6 +577,12 @@ body {
   width: 100%;
 }
 
+@media (max-width: 479px) {
+  .wrapper {
+    padding: 0 20px;
+  }
+}
+
 a {
   text-decoration: none;
 }
@@ -692,7 +697,7 @@ svg {
 }
 
 .e-burger-menu__bar {
-  background-color: #262626;
+  background-color: #fff;
   -webkit-transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
   transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 20px;
@@ -783,255 +788,7 @@ svg {
 }
 
 .e-photocard__photo {
-  max-width: 210px;
-}
-
-.container {
-  background-image: linear-gradient(-128deg, rgba(255, 181, 32, 0.93) 3%, rgba(239, 39, 153, 0.93) 88%, rgba(237, 18, 171, 0.93) 100%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.add-product {
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  background-color: #FFC145;
-  height: 144px;
-  width: 144px;
-  border-radius: 72px;
-  -webkit-box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.07);
-          box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.07);
-  cursor: pointer;
-}
-
-.add-product.open {
-  background-color: #FAFAFA;
-  padding: 18px 32px;
-  border-radius: 5px;
-  width: 420px;
-  height: 398px;
-  cursor: default;
-}
-
-.add-product.open form {
-  opacity: 1;
-  -webkit-transition: opacity 0.1s ease;
-  transition: opacity 0.1s ease;
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
-  height: auto;
-}
-
-.add-product .button-copy {
-  text-align: center;
-  line-height: 144px;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #f7f7f7;
-}
-
-.add-product form {
-  -webkit-transition: none;
-  transition: none;
-  opacity: 0;
-  height: 0;
-  overflow: hidden;
-}
-
-.add-product .cancel {
-  font-size: 12px;
-  text-align: center;
-  margin-top: 1em;
-}
-
-.add-product .cancel span {
-  cursor: pointer;
-}
-
-.add-product .cancel span:hover {
-  text-decoration: underline;
-}
-
-.submit-button {
-  display: block;
-  background-color: #3498DB;
-  height: 40px;
-  border-radius: 20px;
-  line-height: 36px;
-  text-align: center;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 0.875em;
-  border: none;
-  font-weight: 700;
-  padding: 0 34px;
-  margin: 0 auto;
-}
-
-.submit-button img {
-  position: relative;
-  top: 3px;
-  right: 6px;
-}
-
-.submit-button:hover {
-  background-color: #217dbb;
-  cursor: pointer;
-}
-
-.featured-note {
-  color: #949494;
-  font-size: 12px;
-  margin: 4px 0px;
-  line-height: 18px;
-  font-style: italic;
-}
-
-form * {
-  outline: none;
-}
-
-label {
-  display: block;
-  font-size: 14px;
-  font-weight: bold;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-label.emoji input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  height: 21px;
-  margin: 0;
-  display: none;
-}
-
-label.emoji input + span:after {
-  content: "😶";
-  font-size: 18px;
-  top: 2px;
-  left: 2px;
-  position: relative;
-  height: 18px;
-  display: inline-block;
-}
-
-label.emoji input:checked + span:after {
-  content: "😀";
-}
-
-.form--field {
-  width: 420px;
-  margin: 10px 0;
-}
-
-.form--field.-short {
-  width: 120px;
-}
-
-.form--price {
-  position: absolute;
-  line-height: 38px;
-  width: 16px;
-  color: #C7C7C7;
-  text-align: center;
-}
-
-.form--price + input {
-  padding-left: 14px;
-}
-
-.form--container {
-  width: 420px;
-}
-
-.form--container.-inline {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: -12px;
-}
-
-.form--element {
-  background-color: #fff;
-  border: 1px solid #ECECEC;
-  border-radius: 3px;
-  font-size: 14px;
-  line-height: 28px;
-  padding: 0 4px;
-  color: #3D3D3D;
-  width: 100%;
-  margin: 4px 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.form--element:focus {
-  border: 1px solid #FFC145;
-  border-radius: 2px;
-}
-
-.form--element:not(.texteare) {
-  height: 30px;
-}
-
-.form--element.textarea {
-  height: 80px;
-  resize: none;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  background-color: #F3F4F5;
-  cursor: default;
-}
-
-a {
-  text-decoration: none;
-  cursor: pointer;
-}
-
-::-moz-selection {
-  background-color: #F5617A;
-  color: #fff;
-}
-
-::selection {
-  background-color: #F5617A;
-  color: #fff;
-}
-
-::-moz-selection {
-  background-color: #F5617A;
-  color: #fff;
+  width: 300px;
 }
 
 .c-header {
@@ -1103,6 +860,13 @@ a {
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .c-footer__logo {
@@ -1202,7 +966,7 @@ a {
 }
 
 .c-banner__wrapper--width-mode .c-banner__title {
-  font-size: 45px;
+  font-size: 2.8125em;
 }
 
 .c-banner__wrapper--width-mode .c-banner__sub-title {
@@ -1272,18 +1036,14 @@ a {
 }
 
 .c-section-services {
-  font-family: "Sen-Regular";
+  font-family: "Sen-Regular", sans-serif;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 65px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 1200px;
-  padding-top: 65px;
   color: #000;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1291,12 +1051,12 @@ a {
 }
 
 .c-section-services__wrapper {
+  margin: 65px 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1311,7 +1071,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 50px;
-  padding: 0 10px 0 10px;
+  padding: 0 10px;
 }
 
 @media (max-width: 1023px) {
@@ -1327,8 +1087,8 @@ a {
 
 .c-section-services__info__title {
   margin-right: 50px;
-  line-height: 1.2;
-  max-width: 500px;
+  line-height: 1.3;
+  max-width: 600px;
 }
 
 @media (max-width: 1023px) {
@@ -1341,7 +1101,7 @@ a {
 
 .c-section-services__info h2 {
   font-family: "Sen-Bold";
-  font-size: 40px;
+  font-size: 2.8125em;
 }
 
 .c-section-services__info__subtitle {
@@ -1382,7 +1142,7 @@ a {
 
 .c-section-services .c-service-content__item {
   width: 100%;
-  padding: 0 10px 0 10px;
+  padding: 0 10px;
   max-width: 320px;
 }
 
@@ -1392,26 +1152,6 @@ a {
     margin-bottom: 40px;
     max-width: 700px;
   }
-}
-
-.c-section-services .c-service-content__service-card {
-  background-color: #000;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 10px;
-  margin-bottom: 50px;
-  position: relative;
-  min-height: 350px;
-  overflow: hidden;
-  color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
 }
 
 .c-section-about-us {
@@ -1433,7 +1173,6 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 1300px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   display: -webkit-box;
@@ -1453,19 +1192,17 @@ a {
 .section-advantages__header {
   position: relative;
   margin-bottom: 55px;
-  padding: 0 50px;
 }
 
 .section-advantages__title {
   margin-top: 30px;
   font-weight: bold;
-  font-size: 32px;
-  line-height: 54px;
+  font-size: 1.875em;
   text-align: center;
 }
 
 .section-advantages__subtitle {
-  font-size: 16px;
+  font-size: 1em;
   margin-top: 20px;
   text-align: center;
 }
@@ -1477,15 +1214,14 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0px 45px;
 }
 
 .section-advantages__column {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 25%;
           flex: 0 0 25%;
+  margin-bottom: 50px;
   padding: 0 35px;
-  margin-bottom: 15px;
 }
 
 @media (max-width: 1023px) {
@@ -1494,6 +1230,8 @@ a {
         -ms-flex: 1 0 50%;
             flex: 1 0 50%;
     min-width: 250px;
+    text-align: center;
+    padding: 0;
   }
 }
 
@@ -1508,13 +1246,13 @@ a {
 
 .item-advantages__title {
   font-weight: 600;
-  font-size: 24px;
+  font-size: 1.5em;
   margin-bottom: 15px;
 }
 
 .item-advantages__text {
   font-weight: 100;
-  font-size: 16px;
+  font-size: 1em;
   line-height: 26px;
 }
 
@@ -1566,10 +1304,26 @@ a {
   margin-top: 100px;
 }
 
-.c-service-card__wrapper {
-  width: 100%;
+.c-service-card {
+  background-color: #000;
+  font-family: "Sen-Bold", sans-serif;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 2.8125em;
-  font-family: "Sen-Bold";
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  position: relative;
+  min-height: 350px;
+  overflow: hidden;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
 }
 
 .c-service-card__number {
