--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -63,6 +63,10 @@ body {
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
+
+  @include media ('<phone'){
+    padding: 0 20px;
+  }
 }
 
 a {
