--- a/scss/components/_service-card.scss
+++ b/scss/components/_service-card.scss
@@ -1,9 +1,17 @@
 .c-service-card {
-  &__wrapper {
-    width: 100%;
-    font-size: em($fs-h2);
-    font-family: "Sen-Bold";
-  }
+  background-color: $c-black;
+  font-family: $f-sen-bold;
+  justify-content: center;
+  font-size: em($fs-h2);
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  position: relative;
+  min-height: 350px;
+  overflow: hidden;
+  color: $c-white;
+  display: flex;
+  width: 100%;
   &__number {
     position: absolute;
     left: 15px;
