changed colo in service card

--- a/scss/components/_service-card.scss
+++ b/scss/components/_service-card.scss
@@ -1,5 +1,5 @@
 .c-service-card {
-  background-color: $c-black;
+  background-color: $c-darker-grey;
   font-family: $f-sen-bold;
   justify-content: center;
   font-size: em($fs-h2);
