--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -2,7 +2,7 @@ mixin section-about-us()
   .c-section-about-us   
     .c-section-about-us__wrapper.wrapper 
       +photocard({
-          src: './assets/img/ann.png',
+          src: './assets/photos/ann.png',
           alt: 'girl',
           photoCardName: 'Anna Bondarenko'
       })
