--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -1,5 +1,5 @@
 mixin section-about-us()
-  .c-section-about-us   
+  section.c-section-about-us   
     .c-section-about-us__wrapper.wrapper 
       +photocard({
           src: './assets/photos/ann.png',
@@ -9,7 +9,7 @@ mixin section-about-us()
 
       //- Друга колонка
       +photocard({
-        src: './assets/photos/dmytro.png',
+        src: './assets/photos/Dimooooon.png',
         alt: 'boy',
         photoCardName: 'Dmytro Fedin'
       })
