--- a/src/_includes/elements/photocard.pug
+++ b/src/_includes/elements/photocard.pug
@@ -9,4 +9,5 @@ mixin photocard(args)
             src,
             alt
           })
+        .e-photocard__rear-photo
         .e-photocard__name=photoCardName
