--- a/scss/elements/_photocard.scss
+++ b/scss/elements/_photocard.scss
@@ -3,7 +3,13 @@
   align-items: center;
   margin: 30px 5px;
   display: flex;
+  position: relative;
   flex: 0 0 30%;
+
+  &:hover>&__photo{
+    transform: perspective(300px) rotateY(-180deg);}
+  &:hover>&__rear-photo{
+      transform: perspective(300px) rotateY(0deg);}
 
   &__name {
     font-family: $f-sen-regular;
@@ -18,5 +24,27 @@
 
   &__photo{
   width: 300px;
+  height: 300px;
+  overflow: hidden;
+  max-width: 300px;
+  border-radius: 50%;
+  transition: $t-normal;
+  backface-visibility: hidden;
+  transform: perspective(300px) rotateY(0deg);
+
   }
+  &__rear-photo{
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    border-radius: 50%;
+    transition: $t-normal;
+    backface-visibility: hidden;
+    transform: perspective(300px) rotateY(-180deg);
+    background-image: url(../../assets/photos/Beetroot-Logo.png);
+}
 }
