added animation on section about-us

--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -2,7 +2,7 @@ mixin section-about-us()
   section.c-section-about-us   
     .c-section-about-us__wrapper.wrapper 
       +photocard({
-          src: './assets/photos/ann.png',
+          src: './assets/photos/Anasteisha.png',
           alt: 'girl',
           photoCardName: 'Anna Bondarenko'
       })
@@ -16,25 +16,25 @@ mixin section-about-us()
 
       //- Третя колонка
       +photocard({
-        src: './assets/photos/sergii.png',
+        src: './assets/photos/SerGo.png',
         alt: 'boy',
         photoCardName: 'Serhii Trytenko'
       })
 
       +photocard({
-        src: './assets/photos/tatjana.png',
+        src: './assets/photos/Tanuffka.png',
         alt: 'boy',
         photoCardName: 'Tatjana Bezkorovaina'
       })
 
       +photocard({
-        src: './assets/photos/pavlo.png',
+        src: './assets/photos/Pavlentiy.png',
         alt: 'boy',
         photoCardName: 'Pavlo Baliasnikov'
       })
 
       +photocard({
-        src: './assets/photos/alex.png',
+        src: './assets/photos/Oleksiychuk.jpg',
         alt: 'boy',
         photoCardName: 'Aleksei Pavlenko'
       })
