--- a/scss/elements/_photocard.scss
+++ b/scss/elements/_photocard.scss
@@ -2,6 +2,7 @@
   flex-direction: column;
   align-items: center;
   margin: 30px 5px;
+  cursor: pointer;
   display: flex;
   position: relative;
   flex: 0 0 30%;
