--- a/scss/components/_service-card.scss
+++ b/scss/components/_service-card.scss
@@ -10,6 +10,7 @@
   min-height: 350px;
   overflow: hidden;
   color: $c-white;
+  cursor: pointer;
   display: flex;
   width: 100%;
   &__number {
