--- a/scss/elements/_photocard.scss
+++ b/scss/elements/_photocard.scss
@@ -46,6 +46,6 @@
     transition: $t-normal;
     backface-visibility: hidden;
     transform: perspective(300px) rotateY(-180deg);
-    background-image: url(../../assets/photos/Beetroot-Logo.png);
+    background-image: url(./assets/photos/Beetroot-Logo.png);
 }
 }
