--- a/scss/_keyframes.scss
+++ b/scss/_keyframes.scss
@@ -6,3 +6,21 @@
     transform: rotate(360deg);
   }
 }
+@keyframes typewriter {
+  to {
+    left: 100%;
+  }
+}
+
+@keyframes blink {
+  to {
+    background: transparent;
+  }
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
