--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,7 @@ $c-black: #000;
 // Fonts
 $f-sen-bold: "Sen-Bold", sans-serif;
 $f-sen-regular: "Sen-Regular", sans-serif;
+$f-Source-Pro: "Source-San-Pro_Bold", monospace;
 
 // Font size
 $fs-1-5em: 24;
