--- a/src/_includes/components/section-services.pug
+++ b/src/_includes/components/section-services.pug
@@ -6,7 +6,7 @@ mixin section-services()
         //- Title
         .c-section-services__info__title
           p WAYS TO SUPPORT 
-          h2 Support Acme Outdoors.
+          h2.type-animation Support Acme Outdoors.
         .c-section-services__info__subtitle
           p COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now more than ever. Below, we’ve listed the best ways to help us through this season.
 
