--- a/src/_includes/components/section-establishment.pug
+++ b/src/_includes/components/section-establishment.pug
@@ -8,7 +8,7 @@ mixin section-establishment()
         video(width="500" height="250" controls poster="./assets/images/poster1.jpg")
           source(type="video/mp4" src="./assets/media/day.mp4")
         p.section-establishment__media-text Music for mood
-        audio(controls)
+        audio(controls).section-establishment__audio.w-100
           source(type="audio/mp3" src="./assets/media/ylvis-thefox.mp3")
       .section-establishment__meet.bg-dark.text-white
         h4.section-establishment__meet-title Meet the Owners
