--- a/scss/components/_section-establishment.scss
+++ b/scss/components/_section-establishment.scss
@@ -7,10 +7,13 @@
 
   &__wrapper {
     font-family: $f-sen-regular;
-    max-width: 1300px;
     display: flex;
 
     @include media ('<desktop'){
+      flex-direction: column;
+    }
+
+    @include media ('<phone'){
       flex-direction: column;
       padding: 0;
     }
@@ -45,6 +48,10 @@
     &-text {
       padding: 20px 0 10px;
     }
+  }
+
+  &__audio {
+    max-width: 320px;
   }
 
   &__meet {
