Fixed SerGO photo

--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -2,9 +2,9 @@ mixin section-about-us()
   section.c-section-about-us   
     .c-section-about-us__wrapper.wrapper 
       +photocard({
-          src: './assets/photos/Anasteisha.png',
-          alt: 'girl',
-          photoCardName: 'Anna Bondarenko'
+        src: './assets/photos/Anasteisha.png',
+        alt: 'girl',
+        photoCardName: 'Anna Bondarenko'
       })
 
       //- Друга колонка
@@ -16,7 +16,7 @@ mixin section-about-us()
 
       //- Третя колонка
       +photocard({
-        src: './assets/photos/SerGo.png',
+        src: './assets/photos/SerGO.png',
         alt: 'boy',
         photoCardName: 'Serhii Trytenko'
       })
