changed all png to jpg

--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -2,33 +2,33 @@ mixin section-about-us()
   section.c-section-about-us   
     .c-section-about-us__wrapper.wrapper 
       +photocard({
-          src: './assets/photos/Anasteisha.png',
+          src: './assets/photos/Anasteisha.jpg',
           alt: 'girl',
           photoCardName: 'Anna Bondarenko'
       })
 
       //- Друга колонка
       +photocard({
-        src: './assets/photos/Dimooooon.png',
+        src: './assets/photos/Dimooooon.jpg',
         alt: 'boy',
         photoCardName: 'Dmytro Fedin'
       })
 
       //- Третя колонка
       +photocard({
-        src: './assets/photos/SerGo.png',
+        src: './assets/photos/SerGo.jpg',
         alt: 'boy',
         photoCardName: 'Serhii Trytenko'
       })
 
       +photocard({
-        src: './assets/photos/Tanuffka.png',
+        src: './assets/photos/Tanuffka.jpg',
         alt: 'boy',
         photoCardName: 'Tatjana Bezkorovaina'
       })
 
       +photocard({
-        src: './assets/photos/Pavlentiy.png',
+        src: './assets/photos/Pavlentiy.jpg',
         alt: 'boy',
         photoCardName: 'Pavlo Baliasnikov'
       })
@@ -40,13 +40,13 @@ mixin section-about-us()
       })
 
       +photocard({
-        src: './assets/photos/shtepa.png',
+        src: './assets/photos/shtepa.jpg',
         alt: 'boy', 
         photoCardName: 'Anastasiia Shtepa'
       })
 
       +photocard({
-        src: './assets/photos/vitalii.png',
+        src: './assets/photos/vitalii.jpg',
         alt: 'boy', 
         photoCardName: 'Vitaly Liuklian'
       })
