--- a/src/_includes/components/section-about-us.pug
+++ b/src/_includes/components/section-about-us.pug
@@ -16,7 +16,7 @@ mixin section-about-us()
 
       //- Третя колонка
       +photocard({
-        src: './assets/photos/SerGo.jpg',
+        src: './assets/photos/SerGO.jpg',
         alt: 'boy',
         photoCardName: 'Serhii Trytenko'
       })
