--- a/src/_includes/elements/logo.pug
+++ b/src/_includes/elements/logo.pug
@@ -1,5 +1,4 @@
-mixin logo(args)
-
+mixin logo()
   a(href='./index.html').e-logo
     .e-logo__wrapper
       svg(class="icon icon-logo").e-logo__svg
