Added contact page

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -9,3 +9,6 @@
 @import "./banner-contact-us";
 @import "./service-card";
 @import "./loading";
+@import "./banner-contact";
+@import "./section-form.scss";
+@import "./form-contact";
