--- a/src/_includes/components/index.pug
+++ b/src/_includes/components/index.pug
@@ -2,14 +2,22 @@ include ./loading
 include ./header
 include ./navigation
 include ./banner
-include ./banner-home-start
-include ./banner-info-covid
-include ./banner-adventure
-include ./banner-contact-us
-include ./section-services
-include ./service-card
-include ./section-about-us
-include ./section-advantages
-include ./section-establishment
 include ./footer
 
+//- Home page
+include ./banner-home-start
+include ./section-services
+include ./service-card
+include ./banner-info-covid
+
+//- About-us page
+include ./banner-adventure
+include ./section-advantages
+include ./section-establishment
+include ./section-about-us
+include ./banner-contact-us
+
+//- Contact page
+include ./banner-contact
+include ./section-form
+include ./form-contact
