--- a/index.css
+++ b/index.css
@@ -555,6 +555,14 @@ svg {
         background-color: #f2505d;
         border-color: #f2505d;
         color: #fff; }
+  .e-link--button-red {
+    color: #fff;
+    background-color: #f25252;
+    border-radius: 5px;
+    padding: 5px 25px;
+    font-size: 0.875em; }
+    .e-link--button-red:hover {
+      background-color: #262626; }
 
 .e-burger-menu {
   display: none; }
@@ -576,17 +584,6 @@ svg {
         opacity: 0; }
       .e-burger-menu.active .e-burger-menu__bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg); } }
-
-.e-button {
-  background-color: transparent;
-  border: 1px solid #fff;
-  margin-bottom: 115px;
-  border-radius: 5px;
-  padding: 5px 25px;
-  cursor: pointer;
-  outline: none; }
-  .e-button:hover {
-    background-color: #f2505d; }
 
 .e-social-link {
   width: 35px;
@@ -1086,6 +1083,139 @@ svg {
   -moz-background-clip: initial;
   background-clip: initial;
   display: inline-block; }
+
+.c-banner-contact {
+  background-image: linear-gradient(360deg, #222222, rgba(34, 34, 34, 0)), url("../../assets/images/banner-contact.jpeg");
+  background-size: cover;
+  background-position: center center;
+  font-family: "Sen-Bold";
+  min-height: 550px; }
+  .c-banner-contact__wrapper {
+    margin: 0 auto; }
+    @media (max-width: 1023px) {
+      .c-banner-contact__wrapper {
+        margin: 50px auto 20px; } }
+  .c-banner-contact__title {
+    width: 100%;
+    font-size: 2.375em;
+    line-height: 1.3;
+    margin: 0 0 20px; }
+    @media (max-width: 767px) {
+      .c-banner-contact__title {
+        font-size: 2.125em;
+        text-align: center; } }
+    @media (max-width: 479px) {
+      .c-banner-contact__title {
+        display: none; } }
+  @media (max-width: 767px) {
+    .c-banner-contact__tiles {
+      flex-direction: column;
+      align-items: center; } }
+  .c-banner-contact__item {
+    background-color: #fff;
+    color: #262626;
+    border-radius: 5px;
+    padding: 40px;
+    max-width: 350px;
+    margin-right: 20px; }
+    @media (max-width: 767px) {
+      .c-banner-contact__item {
+        margin-bottom: 20px;
+        padding: 20px;
+        max-width: 280px;
+        margin-right: 0; } }
+    .c-banner-contact__item__icon {
+      margin-bottom: 30px;
+      color: #f25252;
+      width: 40px;
+      height: 40px; }
+    .c-banner-contact__item__title {
+      font-weight: 900;
+      font-size: 1.875em;
+      margin-bottom: 10px; }
+    .c-banner-contact__item__text {
+      font-family: "Sen-Regular";
+      font-size: 0.875em;
+      max-width: 240px;
+      font-weight: 300;
+      text-align: center;
+      min-height: 50px; }
+
+.c-section-form {
+  color: #262626;
+  font-family: "Sen-Regular", sans-serif;
+  margin: 80px; }
+  @media (max-width: 767px) {
+    .c-section-form {
+      margin: 30px; } }
+  @media (max-width: 1023px) {
+    .c-section-form__wrapper {
+      flex-direction: column; } }
+  .c-section-form__contact-info {
+    font-size: 0.875em; }
+  .c-section-form__title {
+    font-size: 2em;
+    font-family: "Sen-Bold", sans-serif;
+    margin-bottom: 10px;
+    white-space: nowrap; }
+    @media (max-width: 479px) {
+      .c-section-form__title {
+        font-size: 1.625em; } }
+  .c-section-form__text {
+    margin-bottom: 40px; }
+  .c-section-form__form {
+    width: 100%;
+    margin-left: 150px; }
+    @media (max-width: 1023px) {
+      .c-section-form__form {
+        margin-top: 50px;
+        margin-left: 0; } }
+
+.c-form-contact {
+  font-family: "Sen-Regular", sans-serif;
+  color: #262626;
+  width: 100%; }
+  .c-form-contact__title {
+    font-family: "Sen-Bold", sans-serif;
+    margin-bottom: 10px;
+    font-size: 1.75em; }
+    @media (max-width: 479px) {
+      .c-form-contact__title {
+        font-size: 1.375em; } }
+  .c-form-contact__text {
+    margin-bottom: 10px;
+    font-size: 0.875em; }
+  .c-form-contact__item {
+    margin-bottom: 10px; }
+  .c-form-contact__label {
+    margin-bottom: 5px;
+    font-size: 0.875em;
+    width: 100%; }
+  .c-form-contact__input {
+    border: 1px solid #262626;
+    padding: 8px 12px;
+    border-radius: 3px;
+    font-size: 0.75em;
+    width: 100%;
+    outline: none;
+    transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+    color: #262626;
+    min-height: 30px; }
+    .c-form-contact__input:focus, .c-form-contact__input:hover {
+      transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+      border-color: #f25252; }
+  .c-form-contact__button {
+    max-width: fit-content;
+    color: #fff;
+    font-family: "Sen-Bold", sans-serif;
+    background-color: #f25252;
+    border-radius: 5px;
+    padding: 5px 25px;
+    font-size: 0.875em;
+    border: none;
+    transition: 0.35s cubic-bezier(0.4, 0, 0.2, 1); }
+    .c-form-contact__button:hover {
+      background-color: #262626; }
 
 @keyframes rotate {
   0% {
