Fixed font folder

--- a/scss/components/_banner-contact.scss
+++ b/scss/components/_banner-contact.scss
@@ -4,7 +4,7 @@
       rgb(34, 34, 34),
       rgba(34, 34, 34, 0)
     ),
-    url("../../assets/images/banner-contact.jpeg");
+    url("./assets/images/banner-contact.jpeg");
   @include backgroundCoverCenter;
   font-family: "Sen-Bold";
   min-height: 550px;
