--- a/scss/components/_service-card.scss
+++ b/scss/components/_service-card.scss
@@ -20,6 +20,18 @@
   display: flex;
   width: 100%;
 
+  &__item {
+    width: 100%;
+    padding: 0 10px;
+    max-width: 320px;
+
+      @include media("<desktop") {
+        width: 100%;
+        margin-bottom: 40px;
+        max-width: 700px;
+      }
+  }
+
   &__number {
     position: absolute;
     font-size: em(14);
