--- a/src/_includes/components/service-card.pug
+++ b/src/_includes/components/service-card.pug
@@ -2,9 +2,12 @@ mixin service-card(args)
   - let number = args.number || '00';
   - let text = args.text || 'Default text';
   - let svg = args.svg || 'circle';
+  - let descriptionText = args.descriptionText || 'Default text'
 
-  .c-service-card 
+  .c-service-card__item
+    .c-service-card 
       span.c-service-card__number=number  
       h2.c-service-card__title=text 
       .c-service-card__icon
         +icon({link:'icon-'+svg})
+    p.c-service-content__description=descriptionText
